SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Action_Time__c.field-meta.xml
<CustomField>
        <fullName>Action_Time__c</fullName>
        <label>Action Time</label>
        <type>DateTime</type>
    </CustomField>