SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Check_Out_Reason__c.field-meta.xml
<CustomField>
        <fullName>Check_Out_Reason__c</fullName>
        <label>Check-Out Reason</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>