SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Hours_Checked_In__c.field-meta.xml
<CustomField>
        <fullName>Hours_Checked_In__c</fullName>
        <label># Hours Checked-In</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>