SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <formula>IF( ISPICKVAL(Action__c, "Check-In"), IMAGE("/servlet/servlet.FileDownload?file=015o0000001wimm","Checked-In")&amp;" Checked-In", IMAGE("/servlet/servlet.FileDownload?file=015o0000001wimn","Checked-Out")&amp;" Checked-Out")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </CustomField>