SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Time_Checked_In__c.field-meta.xml
<CustomField>
        <fullName>Time_Checked_In__c</fullName>
        <formula>TEXT(FLOOR((NOW() - Time_Log__r.Last_Time_Checked_Out__c )*24)) &amp;" HRS "&amp; TEXT(FLOOR(MOD(((NOW() - Time_Log__r.Last_Time_Checked_Out__c )*3600*24),3600)/60)) &amp;" MINS"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Checked-In</label>
        <type>Text</type>
    </CustomField>