SFUSA/force-app/main/default/objects/Time_Entry__c/fields/Time_Log__c.field-meta.xml
<CustomField>
        <fullName>Time_Log__c</fullName>
        <label>Time Log</label>
        <referenceTo>Time_Log__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>